# demo-python-cookie-scanner

./: README.md  main.py  pyproject.toml
cookie/: cookie.py
